# wn_gloss

./: .gitignore  DTD_VALIDATION_SUMMARY.md  LICENSE  README.md  SETUP.md  environment.yml  explore_jsonl.py  old_gloss  pyproject.toml  setup_dev.sh  setup_environment.sh  setup_git.sh
docs/: DATA_SHARING_GUIDE.md  IMPLEMENTATION_SUMMARY.md  JSONL_CONVERSION_SUMMARY.md  MODERNIZATION_PLAN.md
examples/: king_analysis.py  king_duckdb_query.sql  king_query_example.sql  simple_king_analysis.py  simple_king_example.py
json_file/: wordnet.jsonl
scripts/: convert_to_jsonl.py  example_jsonl_usage.py  example_usage.py  migrate_wordnet.py  prepare_data_distribution.py
src/wn_gloss/: __init__.py  cli.py  database.py  jsonl_processor.py  models.py  parser.py
tests/: __init__.py  test_basic.py  test_dtd_validation.py  test_jsonl_functionality.py
