[tool.poetry]
name = "wn-gloss"
version = "1.0.0"
description = "A Python project for WordNet glosses - modernizing the WordNet Gloss Disambiguation Project data format"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "wn_gloss", from = "src"}]

[tool.poetry.scripts]
wn-gloss = "wn_gloss.cli:cli"

[tool.poetry.dependencies]
python = "^3.11"
duckdb = "^0.9.0"
pydantic = "^2.0.0"
click = "^8.0.0"
lxml = "^4.9.0"
chardet = "^5.0.0"
tqdm = "^4.65.0"
pandas = "^2.0.0"
jupyterlab = "^4.4.4"
matplotlib = "^3.10.3"
seaborn = "^0.13.2"
plotly = "^6.2.0"
ipywidgets = "^8.1.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^24.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["wn_gloss"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
